# exe

./: Cargo.toml  README.md
src/: configs.rs  deploy.rs  filesystem.rs  lib.rs  main.rs  prelude.rs  sh.rs  styles.rs
src/alacritty/: mod.rs
src/code/: config.rs  install.rs  mod.rs  sync.rs
src/docker/: install.rs  mod.rs
src/git/: commit.rs  install.rs  mod.rs
src/insset/: rust.rs
src/js/: config.rs  install.rs  mod.rs  update.rs
src/linux/: config.rs  mod.rs  os.rs  setup.rs  sync.rs  work_drive.rs
src/linux/manjaro/: config.rs  mod.rs  packages.rs  setup.rs
src/megasync/: install.rs  mod.rs
src/mods/: create.rs  mod.rs
src/nvim/: install.rs  mod.rs
src/pass/: config.rs  install.rs  mod.rs
src/python/: install.rs  mod.rs
src/rust/: create_app.rs  create_mod.rs  install.rs  mod.rs
src/sh/: credentials.rs  exec.rs  files.rs  kill.rs  mod.rs
src/ssh/: install.rs  mod.rs
src/vm/: install.rs  mod.rs
