[package]
name = "exe"
version = "0.1.0"
edition = "2021"
default-run = "exe"

[dependencies]
clap = "4.5" 
console = "0.15"
crossterm   =   "0.27"
sysinfo = "0.30"
chrono = "0.4" 
tempfile = "3.10"
once_cell = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xshell ="0.2"
rustyline = "14.0"